--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="https://sweta05593.github.io/landing-page/" target="_blank" class="work__img">
+                    <a href="https://github.com/sweta05593/landing-page" target="_blank" class="work__img">
                         <img src="assets/img/landing-page.png" alt="">
                     </a>
                     
